[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://game/Slime.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://game/Battle.gd" type="Script" id=4]
[ext_resource path="res://game/ui/StatsPanel.gd" type="Script" id=5]
[ext_resource path="res://game/PlayerStatus.gd" type="Script" id=6]
[ext_resource path="res://themes/DefaultTheme.tres" type="Theme" id=7]
[ext_resource path="res://game/ui/SwordActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/ui/HealActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/Rat.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 4 )
enemies = [ ExtResource( 10 ), ExtResource( 2 ) ]

[node name="PlayerStatus" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 45, 32 )

[node name="Slime" parent="Position2D" instance=ExtResource( 2 )]

[node name="MobileRpgMockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.380392 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.011
anchor_bottom = 1.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 52.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 5 )

[node name="StatusContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP" type="Label" parent="UI/StatsPanel/StatusContainer"]
margin_right = 25.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HP
25"
align = 1
valign = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatusContainer"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AP
3"
align = 1
valign = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatusContainer"]
margin_left = 58.0
margin_right = 84.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MP
10"
align = 1
valign = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 162.0

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_left = 40.0
margin_right = 72.0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_right = 0.989
margin_right = 0.0108795
margin_bottom = 52.0

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 10.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 32.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="ap_changed" from="PlayerStatus" to="UI/StatsPanel" method="_on_PlayerStatus_ap_changed"]
[connection signal="end_turn" from="PlayerStatus" to="." method="_on_PlayerStatus_end_turn"]
[connection signal="hp_changed" from="PlayerStatus" to="UI/StatsPanel" method="_on_PlayerStatus_hp_changed"]
[connection signal="mp_changed" from="PlayerStatus" to="UI/StatsPanel" method="_on_PlayerStatus_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
